--- a/public/views/article/list.ejs
+++ b/public/views/article/list.ejs
@@ -3,6 +3,7 @@
 <% console.log(articles) %>
   <% for(var i=0; i<articles.length; i++) { %>
     <h1> <%= articles[i].title %> </h1>
+    <h3> <%= articles[i].created %> </h3>
     <p>
       <%= articles[i].user%>
     </p>
